syntax = "proto3";

package balancer.v1;

message Events { repeated Transaction transactions = 1; }

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  optional bytes to = 3;
  uint64 nonce = 5;
  string gas_price = 6; // uint256
  uint64 gas_limit = 7;
  uint64 gas_used = 8;
  string value = 9; // uint256
  repeated Log logs = 10;
}

// Balancer V2 WeightedPool, V3 StablePool and V3 Vault events
// https://github.com/balancer/balancer-v2-monorepo/blob/master/pkg/pool-weighted/contracts/WeightedPool.sol
// https://github.com/balancer/balancer-v3-monorepo
message Log {
  bytes address = 1;
  uint64 ordinal = 2;
  repeated bytes topics = 3;
  bytes data = 4;
  oneof log {
    // V2 WeightedPool events
    SwapFeePercentage swap_fee_percentage = 12;
    Paused paused = 13;
    RecoveryMode recovery_mode = 14;
    ProtocolFeePercentage protocol_fee_percentage = 15;
    // V3 StablePool events
    AmpUpdateStarted amp_update_started = 20;
    AmpUpdateStopped amp_update_stopped = 21;
    // V3 Vault events
    VaultSwap vault_swap = 30;
    LiquidityAdded liquidity_added = 31;
    LiquidityRemoved liquidity_removed = 32;
    PoolInitialized pool_initialized = 33;
    PoolRegistered pool_registered = 34;
    PoolPaused pool_paused = 35;
    PoolRecoveryMode pool_recovery_mode = 36;
    AggregateSwapFeePercentage aggregate_swap_fee_percentage = 37;
  }
}

/// @notice Emitted when an approval is made
/// @param owner The address of the token owner
/// @param spender The address of the spender
/// @param value The amount of tokens approved
message Approval {
  bytes owner = 1;   // address (indexed)
  bytes spender = 2; // address (indexed)
  string value = 3;  // uint256
}

/// @notice Emitted when tokens are transferred
/// @param from The address sending tokens
/// @param to The address receiving tokens
/// @param value The amount of tokens transferred
message Transfer {
  bytes from = 1;   // address (indexed)
  bytes to = 2;     // address (indexed)
  string value = 3; // uint256
}

/// @notice Emitted when the swap fee percentage is changed
/// @param swapFeePercentage The new swap fee percentage
message SwapFeePercentage {
  string swap_fee_percentage = 1; // uint256
}

/// @notice Emitted when the paused state is changed
/// @param paused The new paused state
message Paused {
  bool paused = 1; // bool
}

/// @notice Emitted when the recovery mode state is changed
/// @param enabled The new recovery mode state
message RecoveryMode {
  bool enabled = 1; // bool
}

/// @notice Emitted when the protocol fee percentage cache is updated
/// @param feeType The fee type being updated
/// @param protocolFeePercentage The new protocol fee percentage
message ProtocolFeePercentage {
  string fee_type = 1;                // uint256 (indexed)
  string protocol_fee_percentage = 2; // uint256
}

// ===== V3 StablePool Events =====

/// @notice Emitted when an amplification parameter update is started
/// @param startValue The starting amplification value
/// @param endValue The ending amplification value
/// @param startTime The timestamp when the update starts
/// @param endTime The timestamp when the update ends
message AmpUpdateStarted {
  string start_value = 1; // uint256
  string end_value = 2;   // uint256
  string start_time = 3;  // uint256
  string end_time = 4;    // uint256
}

/// @notice Emitted when an amplification parameter update is stopped
/// @param currentValue The current amplification value
message AmpUpdateStopped {
  string current_value = 1; // uint256
}

// ===== V3 Vault Events =====

/// @notice Emitted when a swap is executed through the Vault
/// @param pool The address of the pool
/// @param tokenIn The address of the token being swapped in
/// @param tokenOut The address of the token being swapped out
/// @param amountIn The amount of token in
/// @param amountOut The amount of token out
/// @param swapFeePercentage The swap fee percentage
/// @param swapFeeAmount The swap fee amount
message VaultSwap {
  bytes pool = 1;                 // address (indexed)
  bytes token_in = 2;             // address (indexed)
  bytes token_out = 3;            // address (indexed)
  string amount_in = 4;           // uint256
  string amount_out = 5;          // uint256
  string swap_fee_percentage = 6; // uint256
  string swap_fee_amount = 7;     // uint256
}

/// @notice Emitted when liquidity is added to a pool
/// @param pool The address of the pool
/// @param liquidityProvider The address of the liquidity provider
/// @param kind The type of liquidity addition (enum as uint8)
/// @param totalSupply The total supply after addition
/// @param amountsAddedRaw The amounts of tokens added (as strings)
/// @param swapFeeAmountsRaw The swap fee amounts (as strings)
message LiquidityAdded {
  bytes pool = 1;                           // address (indexed)
  bytes liquidity_provider = 2;             // address (indexed)
  uint32 kind = 3;                          // uint8 (indexed)
  string total_supply = 4;                  // uint256
  repeated string amounts_added_raw = 5;    // uint256[]
  repeated string swap_fee_amounts_raw = 6; // uint256[]
}

/// @notice Emitted when liquidity is removed from a pool
/// @param pool The address of the pool
/// @param liquidityProvider The address of the liquidity provider
/// @param kind The type of liquidity removal (enum as uint8)
/// @param totalSupply The total supply after removal
/// @param amountsRemovedRaw The amounts of tokens removed (as strings)
/// @param swapFeeAmountsRaw The swap fee amounts (as strings)
message LiquidityRemoved {
  bytes pool = 1;                           // address (indexed)
  bytes liquidity_provider = 2;             // address (indexed)
  uint32 kind = 3;                          // uint8 (indexed)
  string total_supply = 4;                  // uint256
  repeated string amounts_removed_raw = 5;  // uint256[]
  repeated string swap_fee_amounts_raw = 6; // uint256[]
}

/// @notice Emitted when a pool is initialized
/// @param pool The address of the pool
message PoolInitialized {
  bytes pool = 1; // address (indexed)
}

/// @notice Emitted when a pool is registered
/// @param pool The address of the pool
/// @param factory The address of the factory that created the pool
message PoolRegistered {
  bytes pool = 1; // address (indexed)
}

// StorePool - minimal pool storage type
// Primary key: pool address
message StorePool {
  bytes factory = 1; // factory address that created the pool
}

/// @notice Emitted when a pool's paused state is changed
/// @param pool The address of the pool
/// @param paused The new paused state
message PoolPaused {
  bytes pool = 1;  // address (indexed)
  bool paused = 2; // bool
}

/// @notice Emitted when a pool's recovery mode state is changed
/// @param pool The address of the pool
/// @param enabled The new recovery mode state
message PoolRecoveryMode {
  bytes pool = 1;   // address (indexed)
  bool enabled = 2; // bool
}

/// @notice Emitted when the aggregate swap fee percentage is changed
/// @param pool The address of the pool
/// @param aggregateSwapFeePercentage The new aggregate swap fee percentage
message AggregateSwapFeePercentage {
  bytes pool = 1;                           // address (indexed)
  string aggregate_swap_fee_percentage = 2; // uint256
}
